Split include/elements.h into multiple libraries
This commit creates the libraries:
- breakdowns.h
- date.h
- laptops.h
- requests.h

--- a/laptop-requisition-manager.cbp
+++ b/laptop-requisition-manager.cbp
@@ -35,9 +35,26 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="include/elements.h" />
+		<Unit filename="include/laptops.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="include/laptops.h" />
+		<Unit filename="include/requests.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="include/requests.h" />
+		<Unit filename="include/breakdowns.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="include/breakdowns.h" />
+		<Unit filename="include/date.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="include/date.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
